<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>15</version>
  </parent>
  <groupId>io.quarkiverse.primefaces</groupId>
  <artifactId>quarkus-primefaces-ecosystem</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus PrimeFaces Ecosystem</name>
  <description>PrimeFaces - is the ultimate component suite for JavaServer Faces</description>
  <modules>
    <module>quarkus-primefaces</module>
    <module>quarkus-primefaces-extensions</module>
    <module>docs</module>
  </modules>
  <scm>
    <connection>scm:git:git@github.com:quarkiverse/quarkus-primefaces.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-primefaces.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-primefaces</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <quarkus.version>3.4.2</quarkus.version>
    <quarkus-poi.version>2.0.3</quarkus-poi.version>
    <quarkus-itext.version>3.0.4</quarkus-itext.version>
    <primefaces.version>13.0.1</primefaces.version>
    <primefaces-extensions.version>13.0.1</primefaces-extensions.version>
    <myfaces.version>4.0.1</myfaces.version>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.myfaces.core.extensions.quarkus</groupId>
        <artifactId>myfaces-quarkus</artifactId>
        <version>${myfaces.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.myfaces.core.extensions.quarkus</groupId>
        <artifactId>myfaces-quarkus-deployment</artifactId>
        <version>${myfaces.version}</version>
      </dependency>
      <dependency>
        <groupId>org.primefaces</groupId>
        <artifactId>primefaces</artifactId>
        <version>${primefaces.version}</version>
        <classifier>jakarta</classifier>
      </dependency>
      <dependency>
        <groupId>org.primefaces.extensions</groupId>
        <artifactId>primefaces-extensions</artifactId>
        <version>${primefaces-extensions.version}</version>
        <classifier>jakarta</classifier>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-jasper-el</artifactId>
        <version>11.0.0-M5</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.30</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.playwright</groupId>
        <artifactId>quarkus-playwright</artifactId>
        <version>0.0.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>net.sourceforge.htmlunit</groupId>
        <artifactId>htmlunit</artifactId>
        <version>2.70.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.24.2</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <repositories>
    <repository>
      <id>apache.snapshots</id>
      <name>Apache Development Snapshot Repository</name>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots />
    </repository>
  </repositories>
</project>